# light-whisper

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: release.yml
docs/: index.html
scripts/: generate-icons.py
src/: index.html  recorder.css  recorder.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  config.rs  lib.rs  main.rs  model_manager.rs  paste.rs  recording.rs  state.rs  stt.rs  tray.rs
