[package]
name = "light-whisper"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
whisper-rs = "0.15"
parakeet-rs = "0.3"
cpal = { version = "0.16", features = [] }
arboard = "3"
enigo = "0.3"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
tauri = { version = "2", features = ["macos-private-api"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
